--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,4 +1,4 @@
-.root {
+.search__wrapper {
   position: relative;
   left: -120px;
 }
@@ -10,11 +10,9 @@
   width: 350px;
   border-radius: 10px;
   font-size: 16px;
-  // transition: all 0.15s ease-in-out;
 
   &:focus {
     border: 1px solid rgba(0, 0, 0, 0.2);
-    // width: 400px;
   }
 }
 
@@ -38,5 +36,35 @@
 
   &:hover {
     opacity: 0.5;
+  }
+}
+
+//--------------------media---------------------
+@media (max-width: 1400px) {
+  .search {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 80px;
+    right: 0;
+
+    display: flex;
+    justify-content: center;
+
+    &__wrapper {
+      left: 0px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .search {
+    position: static;
+  }
+}
+
+@media (max-width: 400px) {
+  .input {
+    width: 300px;
   }
 }
