--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -93,8 +93,18 @@ body {
   &--cart {
     max-width: 820px;
     margin: 90px auto;
+
+    @media (max-width: 1400px) {
+      margin-top: 0px;
+    }
+
     .content__title {
       margin: 0;
+      h2 {
+        font-size: 32px;
+        font-weight: 700;
+        letter-spacing: 0.32px;
+      }
     }
   }
 }
@@ -162,6 +172,7 @@ body {
   &__item {
     display: flex;
     width: 100%;
+    justify-content: space-between;
     border-top: 1px solid $gray-line;
     padding-top: 30px;
     margin-top: 30px;
@@ -184,6 +195,10 @@ body {
       justify-content: center;
       width: 40%;
 
+      @media (max-width: 992px) {
+        width: 25%;
+      }
+
       h3 {
         font-weight: bold;
         font-size: 22px;
@@ -202,6 +217,10 @@ body {
       align-items: center;
       justify-content: space-between;
       width: 13%;
+
+      @media (max-width: 992px) {
+        width: 15%;
+      }
 
       &-minus {
         svg {
@@ -241,11 +260,13 @@ body {
       justify-content: center;
       width: 33%;
 
-      b {
-        font-weight: bold;
-        font-size: 22px;
-        letter-spacing: 0.01em;
+      @media (max-width: 992px) {
+        width: 25%;
       }
+
+      font-weight: bold;
+      font-size: 22px;
+      letter-spacing: 0.01em;
     }
 
     &-remove {
@@ -287,9 +308,19 @@ body {
     &-details {
       display: flex;
       justify-content: space-between;
+      gap: 10px;
 
       span {
-        font-size: 22px;
+        font-size: 21px;
+
+        @media (max-width: 768px) {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+
+          font-size: 20px;
+          font-weight: 700;
+        }
 
         &:last-of-type {
           b {
@@ -300,9 +331,17 @@ body {
     }
 
     &-buttons {
+      margin-top: 40px;
+
       display: flex;
       justify-content: space-between;
-      margin-top: 40px;
+      gap: 30px;
+
+      font-size: 16px;
+
+      @media (max-width: 480px) {
+        font-size: 15px;
+      }
 
       .go-back-btn {
         display: flex;
@@ -329,18 +368,25 @@ body {
 
         svg {
           margin-right: 12px;
+
           path {
             fill: transparent;
             stroke-width: 2;
+          }
+
+          @media (max-width: 480px) {
+            display: none;
           }
         }
       }
 
       .pay-btn {
-        font-size: 16px;
         font-weight: 600;
         width: 210px;
-        padding: 16px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
@@ -350,7 +396,16 @@ body {
     max-width: 620px;
     text-align: center;
 
-    h2 {
+    @media (max-width: 1400px) {
+      margin-top: 0;
+    }
+
+    @media (max-width: 768px) {
+      margin-bottom: 10px;
+    }
+
+    h2,
+    > span {
       font-size: 36px;
       margin-bottom: 15px;
       font-weight: 700;
@@ -378,8 +433,61 @@ body {
       padding: 12px 0 14px;
       width: 230px;
       margin: 0 auto;
+
       font-weight: 600;
       font-size: 18px;
+    }
+  }
+}
+
+//-----------------------media-----------------------------
+
+@media (max-width: 700px) {
+  .cart {
+    &__item {
+      display: grid;
+      grid-template-columns: 1fr 1fr 100px;
+      place-items: center;
+
+      &-img {
+        width: 100%;
+        grid-row: span 2;
+      }
+
+      &-info {
+        width: 100%;
+        text-align: left;
+
+        @media (max-width: 400px) {
+          h3 {
+            font-size: 20px;
+            line-height: 25px;
+          }
+        }
+      }
+      &-count {
+        width: 50%;
+      }
+
+      &-price {
+        width: 100%;
+        font-size: 20px;
+        justify-content: left;
+      }
+
+      &-remove {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .cart {
+    .content__title {
+      h2 {
+        display: none;
+      }
     }
   }
 }
