--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,10 +10,11 @@ body {
 .wrapper {
   width: calc(100vw - 100px);
   height: 100%;
-  background-color: #fff;
-  margin: 50px auto;
-  border-radius: 10px;
   max-width: 1400px;
+  margin: 50px auto;
+
+  background-color: #fff;
+  border-radius: 10px;
 
   @media (max-width: 480px) {
     width: calc(100vw - 30px);
@@ -25,10 +26,11 @@ body {
   padding: 40px 0;
 
   &__error-info {
-    text-align: center;
     margin: 60px auto;
     max-width: 500px;
     margin-bottom: 10px;
+
+    text-align: center;
 
     h2 {
       font-size: 32px;
@@ -41,13 +43,15 @@ body {
   }
 
   &__title {
+    margin: 45px 0;
+
     font-size: 38px;
     font-weight: 700;
-    margin: 45px 0;
   }
 
   &__items {
     margin: 0 auto;
+
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     column-gap: 11px;
@@ -121,11 +125,12 @@ body {
     align-items: center;
 
     svg {
-      position: relative;
-      top: -2px;
       width: 30px;
       height: 30px;
       margin-right: 10px;
+
+      position: relative;
+      top: -2px;
       path {
         stroke: $black;
         stroke-width: 1.9;
@@ -140,8 +145,9 @@ body {
     @include noselect();
 
     span {
-      display: inline-block;
       margin-left: 7px;
+      display: inline-block;
+
       color: #b6b6b6;
       font-size: 18px;
     }
@@ -170,18 +176,20 @@ body {
   }
 
   &__item {
-    display: flex;
     width: 100%;
-    justify-content: space-between;
-    border-top: 1px solid $gray-line;
     padding-top: 30px;
     margin-top: 30px;
+
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+
+    position: relative;
+    border-top: 1px solid $gray-line;
 
     &-img {
       display: flex;
       align-items: center;
-      margin-right: 15px;
-      width: 10%;
 
       img {
         width: 80px;
@@ -190,14 +198,11 @@ body {
     }
 
     &-info {
+      width: 30%;
+
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 40%;
-
-      @media (max-width: 992px) {
-        width: 25%;
-      }
 
       h3 {
         font-weight: bold;
@@ -213,14 +218,12 @@ body {
     }
 
     &-count {
+      width: 15%;
+
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
-
-      @media (max-width: 992px) {
-        width: 15%;
-      }
+      gap: 2px;
 
       &-minus {
         svg {
@@ -255,14 +258,11 @@ body {
     }
 
     &-price {
+      width: 20%;
+
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 33%;
-
-      @media (max-width: 992px) {
-        width: 25%;
-      }
 
       font-weight: bold;
       font-size: 22px;
@@ -273,7 +273,6 @@ body {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      width: 4%;
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -446,8 +445,8 @@ body {
   .cart {
     &__item {
       display: grid;
-      grid-template-columns: 1fr 1fr 100px;
-      place-items: center;
+      grid-template-columns: 1fr 1.5fr 85px;
+      align-items: start;
 
       &-img {
         width: 100%;
@@ -466,13 +465,14 @@ body {
         }
       }
       &-count {
-        width: 50%;
+        width: 100%;
+        justify-content: flex-end;
       }
 
       &-price {
         width: 100%;
-        font-size: 20px;
         justify-content: left;
+        font-size: 20px;
       }
 
       &-remove {
