--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -53,8 +53,16 @@ body {
     margin: 0 auto;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(3, minmax(280px, 1fr));
     column-gap: 11px;
+
+    @media (max-width: 1100px) {
+      grid-template-columns: repeat(2, minmax(280px, 1fr));
+    }
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(1, minmax(280px, 1fr));
+    }
   }
 
   &__top {
@@ -124,17 +132,10 @@ body {
     display: flex;
     align-items: center;
 
-    svg {
-      width: 30px;
-      height: 30px;
-      margin-right: 10px;
-
-      position: relative;
-      top: -2px;
-      path {
-        stroke: $black;
-        stroke-width: 1.9;
-      }
+    .shopping {
+      color: $black;
+      font-size: 35px;
+      font-weight: 700;
     }
   }
 
