--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -145,14 +145,10 @@
     line-height: 23px;
     padding: 12px 25px;
 
-    svg {
+    .shopping {
+      font-size: 20px;
       margin-right: 8px;
       margin-bottom: 1px;
-    }
-
-    span {
-      font-weight: 600;
-      font-size: 16px;
     }
   }
 }
