--- a/src/scss/components/_full-pizza.scss
+++ b/src/scss/components/_full-pizza.scss
@@ -38,6 +38,11 @@
     font-size: 30px;
     letter-spacing: 0.5;
   }
+
+  &__loading {
+    text-align: center;
+    font-size: 25px;
+  }
 }
 
 @media (max-width: 992px) {
