--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -79,19 +79,11 @@ body {
       .categories {
         width: 100%;
         overflow: auto;
+        padding: 8px 20px;
+        scrollbar-width: none;
 
-        ul {
-          width: 785px;
-        }
-      }
-    }
-
-    @media (max-width: 760px) {
-      .categories {
-        ul {
-          li {
-            padding: 8px 20px;
-          }
+        &::-webkit-scrollbar {
+          width: 0;
         }
       }
     }
@@ -122,6 +114,15 @@ body {
 }
 
 .cart {
+  position: relative;
+
+  .modal {
+    top: 0;
+    left: 0;
+
+    padding: 15px 10px;
+  }
+
   &__top {
     display: flex;
     justify-content: space-between;
