--- a/src/scss/components/_custom-modal.scss
+++ b/src/scss/components/_custom-modal.scss
@@ -1,10 +1,17 @@
 .modal {
-  position: absolute;
   width: 100%;
   height: 100%;
   padding: 15px 10px;
 
+  position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   background-color: #ffdf8c;
+
+  transition: opacity 0.5s;
 
   &__content {
     display: flex;
