--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,5 +1,3 @@
-@import "../variables";
-
 .button {
   padding: 10px 20px;
   min-width: 100px;
@@ -97,7 +95,7 @@
     }
   }
 
-  &__delimiter {
+  &--delimiter {
     width: 1px;
     height: 25px;
     background-color: rgba(255, 255, 255, 0.25);
@@ -144,6 +142,7 @@
     align-items: center;
     line-height: 23px;
     padding: 12px 25px;
+    white-space: nowrap;
 
     .shopping {
       font-size: 20px;
