--- a/src/components/Categories/categories.scss
+++ b/src/components/Categories/categories.scss
@@ -1,5 +1,3 @@
-@import "../variables";
-
 .categories {
   ul {
     display: flex;
@@ -26,6 +24,27 @@
         background-color: #282828;
         color: #fff;
       }
+    }
+  }
+
+  @media (max-width: 900px) {
+    width: 100%;
+    overflow: auto;
+    padding: 8px 0px;
+
+    scrollbar-color: #888 #f0f0f0;
+
+    &::-webkit-scrollbar {
+      height: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #888;
+      border-radius: 50%;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #f0f0f0;
     }
   }
 }
