--- a/src/components/NotFoundBlock/not-found-block.scss
+++ b/src/components/NotFoundBlock/not-found-block.scss
@@ -1,14 +1,14 @@
-.root {
+.not-found-block {
   text-align: center;
   padding: 100px;
   max-width: 750px;
   margin: 0 auto;
 
+  &__description {
+    font-size: 22px;
+  }
+
   span {
     font-size: 64px;
   }
-}
-
-.description {
-  font-size: 22px;
 }
