--- a/src/components/PizzaBlock/pizza-block.scss
+++ b/src/components/PizzaBlock/pizza-block.scss
@@ -1,9 +1,7 @@
-@import "../variables";
-
 .pizza-block {
   width: 280px;
-  text-align: center;
   margin-bottom: 65px;
+  text-align: center;
 
   &-wrapper {
     display: flex;
@@ -12,21 +10,25 @@
 
   &__image {
     width: 260px;
+    margin-left: 15px;
   }
 
   &__title {
+    margin-bottom: 20px;
+
     font-size: 20px;
     font-weight: 900;
     letter-spacing: 1%;
-    margin-bottom: 20px;
   }
 
   &__selector {
-    display: flex;
-    background-color: #f3f3f3;
-    border-radius: 10px;
-    flex-direction: column;
     padding: 6px;
+
+    display: flex;
+    background-color: $gray-line;
+    flex-direction: column;
+
+    border-radius: 10px;
 
     ul {
       display: flex;
@@ -43,6 +45,7 @@
         font-weight: 600;
         font-size: 14px;
         @include noselect();
+
         &.active {
           background: #ffffff;
           box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
