--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,495 +1,4 @@
 @import "./variables";
-@import "./libs/normalize";
-
-@import "./components/all";
-
-body {
-  background-color: $background;
-}
-
-.wrapper {
-  width: calc(100vw - 100px);
-  height: 100%;
-  max-width: 1400px;
-  margin: 50px auto;
-
-  background-color: #fff;
-  border-radius: 10px;
-
-  @media (max-width: 480px) {
-    width: calc(100vw - 30px);
-    margin-top: 15px;
-  }
-}
-
-.content {
-  padding: 40px 0;
-
-  &__error-info {
-    margin: 60px auto;
-    max-width: 500px;
-    margin-bottom: 10px;
-
-    text-align: center;
-
-    h2 {
-      font-size: 32px;
-      font-weight: 700;
-    }
-
-    p {
-      font-size: 20px;
-    }
-  }
-
-  &__title {
-    margin: 45px 0;
-
-    font-size: 38px;
-    font-weight: 700;
-  }
-
-  &__items {
-    margin: 0 auto;
-
-    display: grid;
-    grid-template-columns: repeat(3, minmax(280px, 1fr));
-    column-gap: 11px;
-
-    @media (max-width: 1100px) {
-      grid-template-columns: repeat(2, minmax(280px, 1fr));
-    }
-
-    @media (max-width: 768px) {
-      grid-template-columns: repeat(1, minmax(280px, 1fr));
-    }
-  }
-
-  &__top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    @media (max-width: 1260px) {
-      flex-direction: column-reverse;
-      gap: 30px;
-    }
-
-    @media (max-width: 900px) {
-      .categories {
-        width: 100%;
-        overflow: auto;
-        padding: 8px 20px;
-        scrollbar-width: none;
-
-        &::-webkit-scrollbar {
-          width: 0;
-        }
-      }
-    }
-  }
-}
-
-.container {
-  width: $container-width;
-  margin: 0 auto;
-
-  &--cart {
-    max-width: 820px;
-    margin: 90px auto;
-
-    @media (max-width: 1400px) {
-      margin-top: 0px;
-    }
-
-    .content__title {
-      margin: 0;
-      h2 {
-        font-size: 32px;
-        font-weight: 700;
-        letter-spacing: 0.32px;
-      }
-    }
-  }
-}
-
-.cart {
-  position: relative;
-
-  .modal {
-    top: 0;
-    left: 0;
-
-    padding: 15px 10px;
-  }
-
-  &__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .content__title {
-    display: flex;
-    align-items: center;
-
-    .shopping {
-      color: $black;
-      font-size: 35px;
-      font-weight: 700;
-    }
-  }
-
-  &__clear {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    @include noselect();
-
-    span {
-      margin-left: 7px;
-      display: inline-block;
-
-      color: #b6b6b6;
-      font-size: 18px;
-    }
-
-    span,
-    svg,
-    path {
-      transition: all $duration ease-in-out;
-    }
-
-    &:hover {
-      svg {
-        path {
-          stroke: darken($color: #b6b6b6, $amount: 50);
-        }
-      }
-      span {
-        color: darken($color: #b6b6b6, $amount: 50);
-      }
-    }
-  }
-
-  .content__items {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__item {
-    width: 100%;
-    padding-top: 30px;
-    margin-top: 30px;
-
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-
-    position: relative;
-    border-top: 1px solid $gray-line;
-
-    &-img {
-      display: flex;
-      align-items: center;
-
-      img {
-        width: 80px;
-        height: 80px;
-      }
-    }
-
-    &-info {
-      width: 30%;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      h3 {
-        font-weight: bold;
-        font-size: 22px;
-        line-height: 27px;
-        letter-spacing: 0.01em;
-      }
-
-      p {
-        font-size: 18px;
-        color: #8d8d8d;
-      }
-    }
-
-    &-count {
-      width: 15%;
-
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 2px;
-
-      &-minus {
-        svg {
-          path:first-of-type {
-            display: none;
-          }
-        }
-
-        &:disabled {
-          opacity: 0.4;
-          border-color: #787878;
-
-          &:active {
-            transform: none;
-          }
-
-          &:hover {
-            background-color: transparent;
-            svg path {
-              fill: #787878;
-            }
-          }
-          svg path {
-            fill: #787878;
-          }
-        }
-      }
-
-      b {
-        font-size: 22px;
-      }
-    }
-
-    &-price {
-      width: 20%;
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      font-weight: bold;
-      font-size: 22px;
-      letter-spacing: 0.01em;
-    }
-
-    &-remove {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-
-      .button {
-        border-color: darken($color: $gray-line, $amount: 10);
-      }
-
-      svg {
-        transform: rotate(45deg);
-
-        path {
-          fill: darken($color: $gray-line, $amount: 15);
-        }
-      }
-
-      .button {
-        svg {
-          width: 11.5px;
-          height: 11.5px;
-          position: relative;
-        }
-        &:hover,
-        &:active {
-          border-color: darken($color: $gray-line, $amount: 80);
-          background-color: darken($color: $gray-line, $amount: 80);
-        }
-      }
-    }
-  }
-
-  &__bottom {
-    margin: 50px 0;
-
-    &-details {
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
-
-      span {
-        font-size: 21px;
-
-        @media (max-width: 768px) {
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-
-          font-size: 20px;
-          font-weight: 700;
-        }
-
-        &:last-of-type {
-          b {
-            color: $orange;
-          }
-        }
-      }
-    }
-
-    &-buttons {
-      margin-top: 40px;
-
-      display: flex;
-      justify-content: space-between;
-      gap: 30px;
-
-      font-size: 16px;
-
-      @media (max-width: 480px) {
-        font-size: 15px;
-      }
-
-      .go-back-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 210px;
-
-        border-color: darken($color: $gray-line, $amount: 10);
-
-        span {
-          color: darken($color: $gray-line, $amount: 20);
-          font-weight: 500;
-          font-weight: 600;
-        }
-
-        &:hover {
-          background-color: darken($color: $gray-line, $amount: 90);
-          border-color: darken($color: $gray-line, $amount: 90);
-
-          span {
-            color: $gray-line;
-          }
-        }
-
-        svg {
-          margin-right: 12px;
-
-          path {
-            fill: transparent;
-            stroke-width: 2;
-          }
-
-          @media (max-width: 480px) {
-            display: none;
-          }
-        }
-      }
-
-      .pay-btn {
-        font-weight: 600;
-        width: 210px;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
-  }
-
-  &--empty {
-    margin: 80px auto;
-    max-width: 620px;
-    text-align: center;
-
-    @media (max-width: 1400px) {
-      margin-top: 0;
-    }
-
-    @media (max-width: 768px) {
-      margin-bottom: 10px;
-    }
-
-    h2,
-    > span {
-      font-size: 36px;
-      margin-bottom: 15px;
-      font-weight: 700;
-    }
-
-    p {
-      font-size: 20px;
-      line-height: 145.4%;
-      letter-spacing: 0.01em;
-      color: #777777;
-    }
-
-    icon {
-      position: relative;
-      top: 2px;
-    }
-
-    img {
-      display: block;
-      width: 300px;
-      margin: 45px auto 60px;
-    }
-
-    .button--black {
-      padding: 12px 0 14px;
-      width: 230px;
-      margin: 0 auto;
-
-      font-weight: 600;
-      font-size: 18px;
-    }
-  }
-}
-
-//-----------------------media-----------------------------
-
-@media (max-width: 700px) {
-  .cart {
-    &__item {
-      display: grid;
-      grid-template-columns: 1fr 1.5fr 85px;
-      align-items: start;
-
-      &-img {
-        width: 100%;
-        grid-row: span 2;
-      }
-
-      &-info {
-        width: 100%;
-        text-align: left;
-
-        @media (max-width: 400px) {
-          h3 {
-            font-size: 20px;
-            line-height: 25px;
-          }
-        }
-      }
-      &-count {
-        width: 100%;
-        justify-content: flex-end;
-      }
-
-      &-price {
-        width: 100%;
-        justify-content: left;
-        font-size: 20px;
-      }
-
-      &-remove {
-        width: 100%;
-      }
-    }
-  }
-}
-
-@media (max-width: 576px) {
-  .cart {
-    .content__title {
-      h2 {
-        display: none;
-      }
-    }
-  }
-}
+@import "./normalize";
+@import "./button";
+@import "./general";
