--- a/src/scss/pages/_full-pizza.scss
+++ b/src/scss/pages/_full-pizza.scss
@@ -1,5 +1,3 @@
-@import "../variables";
-
 .full-pizza {
   display: flex;
   align-items: center;
@@ -65,7 +63,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 576px) {
   .full-pizza {
     gap: 10px;
     flex-direction: column;
@@ -76,8 +74,16 @@
     }
 
     &__img {
-      width: 100%;
+      width: 80%;
       margin-right: -20px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .full-pizza {
+    &__img {
+      width: 100%;
     }
   }
 }
